# polyhal

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.CN.md  README.md  crates.js  help.html  os_module.json  polyhal.code-workspace  read  rust-toolchain.toml  search-index.js  settings.html  src-files.js  test.sh
example/: Cargo.toml  Makefile  all.html  build.rs  fn._polyhal_defined_main.html  fn._polyhal_defined_secondary.html  fn.check_percpu.html  fn.kernel_interrupt.html  fn.main.html  fn.panic.html  fn.secondary.html  index.html  linker.lds  sidebar-items.js  static.TEST_PERCPU.html  static.TIMER_TICKS.html  static.__PERCPU_TEST_PERCPU.html  static.__PERCPU_TIMER_TICKS.html  struct.PageAllocImpl.html
example/allocator/: constant.KERNEL_HEAP_SIZE.html  fn.init_allocator.html  index.html  sidebar-items.js  static.HEAP_ALLOCATOR.html  static.HEAP_SPACE.html
example/frame/: fn.add_frame_range.html  fn.frame_alloc.html  fn.frame_dealloc.html  index.html  sidebar-items.js  static.LOCK_FRAME_ALLOCATOR.html
example/linker/: linker-aarch64.ld  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld
example/pci/: fn.dump_bar_contents.html  fn.enumerate_pci.html  fn.init.html  index.html  sidebar-items.js
example/src/: frame.rs  logging.rs  main.rs  pci.rs  vga.rs
pagetable/: Cargo.toml
pagetable/src/: aarch64.rs  lib.rs  loongarch64.rs  riscv64.rs  x86_64.rs
polyhal/: Cargo.toml  all.html  attr.arch_entry.html  attr.arch_interrupt.html  attr.percpu.html  build.rs  constant.MEM_VECTOR_CAPACITY.html  enum.MappingSize.html  fn.hart_id.html  index.html  macro.bit.html  macro.bits.html  macro.define_entry.html  macro.display_info!.html  macro.display_info.html  macro.pa.html  macro.ph_ctor!.html  macro.ph_ctor.html  macro.print.html  macro.println.html  macro.pub_use_arch!.html  macro.pub_use_arch.html  macro.va.html  sidebar-items.js  struct.MappingFlags.html  struct.PageTable.html  struct.PageTableWrapper.html
polyhal-macro/: Cargo.toml
polyhal-macro/src/: lib.rs  percpu.rs
polyhal-trap/: Cargo.toml
polyhal-trap/src/: lib.rs
polyhal-trap/src/trap/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
polyhal-trap/src/trapframe/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
polyhal/acpi/: fn.get_pci_base.html  fn.get_pm1a_addr.html  fn.init.html  index.html  sidebar-items.js
polyhal/addr/: index.html  sidebar-items.js  struct.PhysAddr.html  struct.PhysPage.html  struct.VirtAddr.html  struct.VirtPage.html
polyhal/apic/: constant.MAX_IRQ_COUNT.html  constant.TIMER_IRQ_NUM.html  fn.init.html  fn.io_apic.html  fn.local_apic.html  fn.pic_eoi.html  fn.raw_apic_id.html  index.html  sidebar-items.js
polyhal/apic/vectors/: constant.APIC_ERROR_VECTOR.html  constant.APIC_SPURIOUS_VECTOR.html  constant.APIC_TIMER_VECTOR.html  index.html  sidebar-items.js
polyhal/arch/: constant.MEM_VECTOR_CAPACITY.html
polyhal/arch/x86_64/: fn.hart_id.html
polyhal/boot/: constant.STACK_SIZE.html  fn.boot_page_table.html  index.html  macro.define_entry.html  sidebar-items.js
polyhal/common/: fn.get_cpu_num.html  fn.get_fdt.html  fn.get_mem_areas.html  fn.init.html  index.html  sidebar-items.js  trait.PageAlloc.html
polyhal/components/boot/: constant.STACK_SIZE.html  index.html
polyhal/components/common/: fn.get_cpu_num.html  fn.get_fdt.html  fn.get_mem_areas.html  fn.init.html  index.html  trait.PageAlloc.html
polyhal/components/consts/: index.html
polyhal/consts/: constant.MULTI_CORE_AREA.html  constant.MULTI_CORE_AREA_SIZE.html  constant.PIC_VECTOR_OFFSET.html  constant.SYSCALL_VECTOR.html  constant.VIRT_ADDR_START.html  index.html  sidebar-items.js
polyhal/ctor/: enum.CtorType.html  fn.__start_ph_init.html  fn.__stop_ph_init.html  fn.ph_init_iter.html  index.html  sidebar-items.js  struct.PHInitWrap.html
polyhal/debug_console/: fn.init_fb.html  index.html  sidebar-items.js  struct.DebugConsole.html
polyhal/gdt/: fn.init.html  fn.set_tss_kernel_sp.html  index.html  sidebar-items.js  struct.GdtStruct.html
polyhal/idt/: fn.init.html  index.html  sidebar-items.js  struct.IdtStruct.html
polyhal/instruction/: fn.ebreak.html  fn.hlt.html  fn.shutdown.html  index.html  sidebar-items.js  struct.Instruction.html
polyhal/irq/: index.html  sidebar-items.js  struct.IRQ.html  struct.IRQVector.html
polyhal/kcontext/: enum.KContextArgs.html  fn.context_switch.html  fn.context_switch_pt.html  fn.read_current_tp.html  index.html  sidebar-items.js  struct.KContext.html
polyhal/macros/: index.html  macro.pub_use_arch.html  sidebar-items.js
polyhal/mem/: fn.add_memory_region.html  fn.alloc.html  fn.get_fdt.html  fn.get_mem_areas.html  fn.init_dtb_once.html  fn.parse_system_info.html  index.html  sidebar-items.js  struct.Barrier.html
polyhal/multicore/: fn.boot_core.html  index.html  sidebar-items.js  struct.CpuCore.html  struct.MultiCore.html
polyhal/pagetable/: constant.PAGE_SIZE.html  constant.USER_VADDR_END.html  enum.MappingSize.html  index.html  sidebar-items.js  struct.MappingFlags.html  struct.PTE.html  struct.PTEFlags.html  struct.PageTable.html  struct.PageTableWrapper.html  struct.TLB.html
polyhal/percpu/: attr.def_percpu.html  fn.get_local_thread_pointer.html  fn.get_percpu_ptr.html  fn.percpu_area_init.html  fn.set_local_thread_pointer.html  index.html  sidebar-items.js  struct.PerCPUReserved.html
polyhal/src/: arch.rs  ctor.rs  lib.rs  mem.rs  time.rs
polyhal/time/: index.html  struct.Time.html
polyhal/timer/: fn.current_time.html  fn.get_freq.html  fn.get_ticks.html  fn.init.html  fn.set_next_timeout.html  fn.set_next_timer.html  index.html  sidebar-items.js
polyhal/trap/: enum.EscapeReason.html  enum.TrapType.html  fn.kernelvec.html  fn.run_user_task.html  fn.run_user_task_forever.html  fn.uservec.html  index.html  sidebar-items.js
polyhal/trapframe/: constant.TRAPFRAME_SIZE.html  enum.TrapFrameArgs.html  index.html  sidebar-items.js  struct.KernelToken.html  struct.TrapFrame.html
polyhal/utils/: index.html  macro.bit.html  sidebar-items.js  struct.LazyInit.html  struct.MutexNoIrq.html  struct.MutexNoIrqGuard.html
(+652 files in other folders)
