[workspace]
resolver = "2"
members = [
    "example",
    "polyhal-macro",
    "polyhal",
    "polyhal-boot",
    "polyhal-trap",
]

[workspace.dependencies]
polyhal = { version = "0.1.2" }
polyhal-boot = { path = "polyhal-boot" }
polyhal-macro = { path = "polyhal-macro" }
polyhal-trap = { path = "polyhal-trap" }

bitflags = "2.0.2"
cfg-if = "1.0.0"

[patch.crates-io]
polyhal = { path = "polyhal" }
