[workspace]
resolver = "2"
members = [
    "example",
    "polyhal-macro",
    "polyhal",
    "polyhal-boot",
    "polyhal-trap",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
description = "This crate provides the interface for multiple platforms."
authors = ["yfblock@321353225@qq.com"]
license = "MIT"
repository = "https://github.com/Byte-OS/polyhal"

[workspace.dependencies]
polyhal = { version = "0.3.2" }
polyhal-boot = { version = "0.3.2" }
polyhal-macro = { version = "0.3.2" }
polyhal-trap = { version = "0.3.2" }

bitflags = "2.9.0"
cfg-if = "1.0.0"

[patch.crates-io]
polyhal = { path = "polyhal" }
polyhal-boot = { path = "polyhal-boot" }
polyhal-macro = { path = "polyhal-macro" }
polyhal-trap = { path = "polyhal-trap" }
