[package]
name = "polyhal-pagetable"
version = "0.1.0"
edition = "2021"

[dependencies]
polyhal-base = { path = "../base" }
polyhal-macro = { path = "../macro" }
bitflags = "2.0.2"


[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
multiboot = "0.8.0"
x2apic = "0.4"
raw-cpuid = "11.0"
acpi = "5.0.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
arm_pl011 = "0.1.0"
tock-registers = "0.8"
arm_gicv2 = "0.1.0"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
