[package]
name = "polyhal-macro"
version = "0.1.0"
edition = "2021"
description = "This crate provides macros for polyhal."
authors = ["yfblock@321353225@qq.com"]
license = "MIT"
repository = "https://github.com/Byte-OS/polyhal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2.0", features = ["full"] }
